@@ -5,7 +5,13 @@
 #include <sys/stat.h>
 #include <sys/file.h>
 
-static const char* FILE_NAME = "Sys/Io/Constant.c";
+#ifdef _WIN32
+# include <winsock2.h>
+#else
+# include <poll.h>
+#endif
+
+static const char* FILE_NAME = "Sys/IO/Constant.c";
 
 int32_t SPVM__Sys__IO__Constant__AT_EMPTY_PATH(SPVM_ENV* env, SPVM_VALUE* stack) {
 
